Adding Storybook to project

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start:dev": "nodemon --exec npm run build:dev",
     "build": "webpack --config ./config/webpack.config.js",
     "build:dev": "webpack --config ./config/webpack.config.js && node ./src/server/app.js",
-    "test": "jest --forceExit"
+    "test": "jest --forceExit",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "keywords": [
     "react",
@@ -35,6 +37,16 @@
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.0.0",
+    "@storybook/addon-actions": "^6.5.10",
+    "@storybook/addon-essentials": "^6.5.10",
+    "@storybook/addon-interactions": "^6.5.10",
+    "@storybook/addon-links": "^6.5.10",
+    "@storybook/builder-webpack4": "^6.5.10",
+    "@storybook/builder-webpack5": "^6.5.10",
+    "@storybook/manager-webpack4": "^6.5.10",
+    "@storybook/manager-webpack5": "^6.5.10",
+    "@storybook/react": "^6.5.10",
+    "@storybook/testing-library": "0.0.13",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@webpack-cli/init": "^1.1.2",
